# ansible-workstation

./: .ansible-lint  .ansible-lint-ignore  .envrc  .gitignore  .gitlint  .mega-linter.yml  .opencommit-commitlint  .pre-commit-config.yaml  .travis.yml  .yamllint  Makefile  Pipfile  README.md  README.rst  commitlint.config.ts  hide-location.sh-Ubuntu.j2  hide-mac.sh-Ubuntu.j2  hosts  mise.toml  music.yml  package-lock.json  package.json  pyproject.toml  requirements.yml  workstation.yml
.cursor/rules/: 001_project-description.mdc  001_workspace.mdc  002_cursor-rules.mdc  003_project-tooling.mdc  100_general-style.mdc  102_functional-vs-oop.mdc  103_general-programming.mdc  111_katex-math.mdc  112_mermaid-diagrams.mdc  113_markdown-enhanced-style.mdc  114_katex-reference.mdc  120_python.mdc  126_quality-assurance_ruff.mdc  128_pydantic.mdc  129_pydantic_settings.mdc  130_version-control_git.mdc  131_ci-cd-github-actions.mdc  134_ansible-best-practices.mdc  140_containerization.mdc  142_kubernetes-helm-deployment.mdc  150_packaging.mdc  153_homebrew-formula.mdc  160_cloud-services-aws.mdc  171_latex-math.mdc  172_katex-math-defs.mdc  173_katex-math-showing-work.mdc  174_latex-symbol-formatting.mdc  180_config-toml.mdc  190_google-sheets.mdc  301_memory.mdc  302_artifacts.mdc  303_note-taking.mdc  304_clear-concise.mdc  500_domains.mdc  510_game-theory.mdc  511_extensive-form-trees.mdc  700_fastapi.mdc
.github/workflows/: ansible-playbook.yml  ci.yml  codeql.yml
defaults/: main.yml
files/: swap2ram.sh
meta/: ansigenome.yml  main.yml
molecule/default/: converge.yml  molecule.yml  playbook.yml
molecule/default/tests/: test_default.py
playbooks/: workstation.yml
tasks/: README.md  ai_tools.yml  apache.yml  asdf.yml  backup.yml  brew.yml  build_tools.yml  cast.yml  cleanup.yml  cloud.yml  communication.yml  container.yml  cpp.yml  crons.yml  debug.yml  desktop.yml  dev.yml  docs.yml  editor.yml  fun.yml  gaming.yml  git.yml  gnome.yml  gui.yml  hdd.yml  health.yml  keepass.yml  laptop.yml  mail.yml  main.yml  mobile.yml  monitoring.yml  mount.yml  music.yml  network.yml  nodejs.yml  optimization.yml  packaging.yml  pdf.yml  perf.yml  (+26 more)
templates/: 192.168.1.24,3260.j2  apache-awx-httpd-7077.conf.j2  apache-evasive.conf.j2  apache-jenkins.conf.j2  apache-kibana3.conf.j2  apache-nabla.conf.j2  awstats.conf.j2  bitcoin-qt-systemd.sh-Ubuntu.j2  bitcoin-qt-timer-systemd.sh-Ubuntu.j2  bitcoind-systemd.sh-Ubuntu.j2  boot-ip-systemd.sh-Ubuntu.j2  boot-ip-timer-systemd.sh-Ubuntu.j2  boot-update-systemd.sh-Ubuntu.j2  boot-update-timer-systemd.sh-Ubuntu.j2  boot-update.sh-Ubuntu.j2  conky-systemd.sh-Ubuntu.j2  conky-timer-systemd.sh-Ubuntu.j2  docker-systemd.sh-Ubuntu.j2  dropbox.desktop.j2  elasticsearch.conf.j2  evasive.conf.j2  geany.conf.j2  guard.sh-Ubuntu.j2  guard.sh.j2  hide-location-systemd.sh-Ubuntu.j2  hide-location-timer-systemd.sh-Ubuntu.j2  hide-location.sh-Ubuntu.j2  hide-mac-systemd.sh-Ubuntu.j2  hide-mac-timer-systemd.sh-Ubuntu.j2  hide-mac.sh-Ubuntu.j2  howdy.conf.j2  info.json.j2  iscsid.conf.j2  jail.local.j2  jenkins.conf.j2  kibana3.conf.j2  litellm-systemd.sh-Ubuntu.j2  maj0-systemd.sh-Ubuntu.j2  maj0-timer-systemd.sh-Ubuntu.j2  minidlna.conf.j2  (+16 more)
